bk_ida/gccida/c3/reload_combine
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9144:28: error: subscripted value is not an array, pointer, or vector
if ( !double_reg_address_ok[0] ) 
      ~~~~~~~~~~~~~~~~~~~~~^~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9183:51: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = get_last_insn( ); insn; insn = ( rtx)insn[1] ) 
                                                  ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9203:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v35 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9212:13: error: expected identifier or '('
 struct set = v34; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9253:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)set->fld[0].rtwint)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9254:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v33 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)set->fld[0].rtwint)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9269:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
plus = ( rtx)set[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9270:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
base = ( rtx)plus[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9276:63: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v29 = ( unsigned __int16)**( _DWORD **)&prev[2] == 47 ? ( rtx)prev[2] : single_set_2( prev, *( rtx *)&prev[2]); 
                                                              ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9341:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9342:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v26 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9350:28: error: use of undeclared identifier 'machine_mode'
const_reg = gen_rtx_REG( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), i); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9350:43: error: expected expression
const_reg = gen_rtx_REG( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), i); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9351:35: error: use of undeclared identifier 'machine_mode'
reg_sum = gen_rtx_fmt_ee( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), const_reg, base); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9351:50: error: expected expression
reg_sum = gen_rtx_fmt_ee( PLUS, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg), const_reg, base); 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9391:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
*np = ( rtx)( *np)[1]; 
            ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9413:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)insn[4]; link; link = ( rtx)link[1] ) 
                   ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9413:48: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)insn[4]; link; link = ( rtx)link[1] ) 
                                               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/reload1.c:9457:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)usage_rtx)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_combine/src/obj/reload1.o] Error 1
